# ai-memory

./: .env.example  .gitignore  .replit  AGENT_TASKS.md  AI_MEMORY_TECHNICAL_SPEC.md  AI_Phone_System_Technical_Documentation.md  ASCII map of your whole system flow  CHATSTACK_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DIGITALOCEAN_DEPLOYMENT_INSTRUCTIONS.md  DOCKER_FIX_GUIDE.md  Dockerfile  FILE_INVENTORY.md  IMPLEMENTATION_PLAN_PHASE1.md  MANUAL_PRODUCTION_FIX.md  MANUAL_PRODUCTION_UPDATE.sh  MEMORY_V2_GUIDE.md  MIGRATION_STRATEGY_TWOPHASE.md  MULTI_PROJECT_ARCHITECTURE.md  NEUROSPHERE_MULTI_TENANT_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_COMMANDS.md  README_MEMORY_V2.md  V2_ENDPOINTS_READY.md  WEEK1_MIGRATION_GUIDE.md  ai-memory-main.py  config-internal.json  config_loader.py  critical AI Checklist  demo_test.py  deploy.sh  deploy_realtime_fastapi.sh  deployment-guide.md  docker-compose-ai.yml  fix_hangup_bug.sh  fix_llm_config.sh  fix_runpod_endpoint.sh  fix_voice_memory_speed.sh  gunicorn.conf.py  init_db.py  (+17 more)
app/: __init__.py  http_memory.py  jwt_utils.py  llm.py  main.py  main.py.backup  main.py.save  memory.py  memory_integration.py  memory_v2_schema.py  models.py  packer.py  personality.py  summarizer.py  tools.py
attached_assets/: Pasted--1-36m-APIServer-pid-19-0-0m-return-await-anext-self-gen-1-36m-APIServer-pid-19-0-0m--1757124805241_1757124805241.txt  Pasted--1-36m-APIServer-pid-20-0-0m-INFO-09-05-17-04-50-launcher-py-44-Route-v1-responses-response--1757117141069_1757117141070.txt  (+11 more)
deploy/: fix-complete-audio-serving.sh  update-nginx.sh  (+2 more)
(+17 files in other folders)
